load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":pyo3_toolchain.bzl",
    "current_pyo3_toolchain",
    "current_rust_pyo3_toolchain",
    "pyo3_toolchain_defaults",
)

exports_files([
    "pyo3_build_config.txt",
])

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//pyo3:__pkg__"],
    deps = [
        "@rules_python//python:defs_bzl",
        "@rules_rust//rust:bzl_lib",
    ],
)

pyo3_toolchain_defaults(
    name = "pyo3_toolchain_defaults",
    pointer_width = select({
        "@platforms//cpu:aarch32": 32,
        "@platforms//cpu:armv7": 32,
        "@platforms//cpu:armv7-m": 32,
        "@platforms//cpu:armv7e-m": 32,
        "@platforms//cpu:armv7e-mf": 32,
        "@platforms//cpu:armv7k": 32,
        "@platforms//cpu:i386": 32,
        "@platforms//cpu:ppc32": 32,
        "@platforms//cpu:riscv32": 32,
        "@platforms//cpu:wasm32": 32,
        "@platforms//cpu:x86_32": 32,
        "//conditions:default": 64,
    }),
    visibility = ["//visibility:public"],
)

current_pyo3_toolchain(
    name = "current_pyo3_toolchain",
)

current_rust_pyo3_toolchain(
    name = "current_rust_pyo3_toolchain",
    tags = [
        "no-clippy",
        "no-rustfmt",
    ],
    visibility = ["//visibility:public"],
)
