load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":pyo3_toolchain.bzl",
    "current_pyo3_toolchain",
    "current_rust_pyo3_toolchain",
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//pyo3:__pkg__"],
    deps = [
        "@rules_python//python:defs_bzl",
        "@rules_rust//rust:bzl_lib",
    ],
)

current_pyo3_toolchain(
    name = "current_pyo3_toolchain",
)

current_rust_pyo3_toolchain(
    name = "current_rust_pyo3_toolchain",
    tags = [
        "no-clippy",
        "no-rustfmt",
    ],
    visibility = ["//visibility:public"],
)
