load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# A flag controlling whether to generate stubs for pyo3 extensions using the
# pyo3-stub-gen tool. This flag requires the creation of binary from the
# extension crate to generate stubs which means, the extension itself must
# be usable in some capacity on the exec platform. An additional limitaiton
# is that the stubs will only ever be generated for the exec platform so
# module interfaces should be platform agnostic or incorrect stubs will be
# generated.
#
# https://github.com/PyO3/pyo3/issues/2454
# https://github.com/Jij-Inc/pyo3-stub-gen
bool_flag(
    name = "experimental_stubgen",
    build_setting_default = True,
)
